--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
     color: #333;
     font-weight: 300;
     -webkit-tap-highlight-color: transparent;
-    padding-bottom: 100px;
 }
 
 strong {
@@ -151,7 +150,6 @@ a {
     font-family: inherit;
     background: #59c6ff;
     color: #fff;
-    border: none;
     padding: 10px;
     margin: 0;
     cursor: pointer;
@@ -163,4 +161,19 @@ a {
     font-weight: 300;
     padding: 20px 0;
     line-height: 150%;
+}
+
+.footer {
+    background: #59c6ff;
+    color: #fff;
+    padding: 10px;
+    margin-top: 100px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 90%;
+}
+
+.footer a {
+    color: #fff;
+    font-weight: 700;
 }
