--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: Lato, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "Clear Sans", "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     color: #333;
     font-weight: 300;
@@ -37,7 +37,7 @@ input, button {
 
 h1 {
     font-size: 500%;
-    font-weight: 300;
+    font-weight: 100;
 }
 
 h2 {
@@ -51,7 +51,7 @@ h2 {
 
 .hero h2 {
     font-weight: 300;
-    margin: 0 0 50px 0;
+    margin: 0 0 35px 0;
 }
 
 .hero-btn {
