--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ input, button {
     border-radius: 0;
 }
 
+button {
+    cursor: pointer;
+}
+
 *:focus {
     outline: none;
 }
@@ -33,6 +37,58 @@ input, button {
     padding: 100px 20px 50px 20px;
     text-align: center;
     color: #fff;
+    position: relative;
+    overflow: visible;
+}
+
+.hero .preview-button {
+    background: #fff url(play2.svg) no-repeat center center;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: -50px;
+    margin: 0 auto;
+    border: none;
+    border-radius: 100%;
+}
+
+.preview {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background: #000;
+    display: none;
+}
+
+.preview iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.preview .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    border-radius: 5px;
+    background: rgb(23, 35, 34);
+    color: #fff;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    margin: 0;
+    padding: 0;
+    font-size: 23px;
+}
+
+.preview .close-button:hover {
+    background: rgb(0, 173, 239);
 }
 
 h1 {
@@ -83,6 +139,7 @@ a {
         padding-top: 70px;
         background-image: none;
         height: auto;
+        padding-bottom: 90px;
     }
 
     .hero-btn {
