--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,13 @@
+{{ define "css" }}
+    {{ template "basecss" . }}
+    <link href="/css/home.css" rel="stylesheet" type="text/css">
+{{ end }}
+
+{{ define "js" }}
+    {{ template "basejs" . }}
+    <script src="/js/home.js"></script>
+{{ end }}
+
 {{ define "main" }}
     <div class="hero">
         <h1>Padlock</h1>
@@ -5,25 +15,25 @@
         <a class="hero-btn download-link" target="_blank" id="downloadButton"></a>
         <button class="preview-button"></button>
     </div>
-    <div class="section platforms">
+    <section class="platforms">
         <p>Also available on</p>
         <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank" class="platform chrome"></a>
         <a href="https://play.google.com/store/apps/details?id=com.maklesoft.padlock" target="_blank" class="platform android"></a>
         <a href="https://itunes.apple.com/app/id871710139" target="_blank" class="platform ios"></a>
-    </div>
-    <div class="section subscribe" id="mc_embed_signup">
+    </section>
+    <section class="subscribe" id="mc_embed_signup">
         <div class="subscribe-text">Want to stay up to date? <strong>Subscribe to our newsletter!</strong></div>
         <form action="https://maklesoft.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter email address"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;"><input type="text" name="b_156fa42cf0f141436c20b06b2_58a9450e8b" value=""></div>
         </form>
-    </div>
-    <div class="section questions">
+    </section>
+    <section class="about">
         {{ range where .Data.Pages "Title" "about" }}
             {{ .Content }}
         {{ end }}
-    </div>
+    </section>
     <a class="source-btn source-link" href="https://github.com/maklesoft/padlock" target="_blank">Get the Source</a>
     <a href="http://maklesoft.com" target="_blank" class="maklesoft-link footer">
         Developed and maintained by <strong>MaKleSoft</strong>
@@ -34,57 +44,4 @@
         <iframe src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
 
-    <script>
-        (function(){
-            var iDevices = ["iPad", "iPhone", "iPod"];
-            function isIOS() {
-                return iDevices.reduce(function(match, dev) {
-                    return match || navigator.platform.indexOf(dev) !== -1;
-                }, false);
-            };
-
-            function isAndroid() {
-                return navigator.userAgent.toLowerCase().indexOf("android") !== -1;
-            }
-
-            var downloadUrls = {
-                "ios": "https://itunes.apple.com/app/id871710139",
-                "android": "https://play.google.com/store/apps/details?id=com.maklesoft.padlock",
-                "other": "https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif"
-            };
-
-            var buttonCaptions = {
-                "ios": "Available on the App Store",
-                "android": "Available on Google Play",
-                "other": "Add to Chrome"
-            };
-
-            var platform = "other";
-            if (isIOS()) {
-                platform = "ios";
-            } else if (isAndroid()) {
-                platform = "android";
-            }
-
-            var button = document.getElementById("downloadButton");
-
-            button.innerHTML = buttonCaptions[platform];
-            button.href = downloadUrls[platform];
-            document.body.classList.add(platform);
-
-            var previewEl = document.querySelector(".preview");
-            var previewButton = document.querySelector(".preview-button");
-            var previewCloseButton = document.querySelector(".preview .close-button");
-            var iframe = previewEl.querySelector("iframe");
-
-            previewButton.addEventListener("click", function() {
-                previewEl.style.display = "block";
-                iframe.src = "https://player.vimeo.com/video/139904442?autoplay=1";
-            });
-
-            previewCloseButton.addEventListener("click", function() {
-                previewEl.style.display = "";
-            });
-        })();
-    </script>
 {{ end }}
