Further clean up; Add header with download links and navigation section

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,10 +32,15 @@
         {{ end }}
     </head>
     <body>
+        {{ block "header" . }}
+            {{ partial "header" }}
+        {{ end }}
+
         {{ block "main" . }}
         {{ end }}
 
         {{ block "footer" . }}
+            {{ partial "footer" }}
         {{ end }}
     </body>
 </html>
