--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
+<section>
     <h2 id="title">{{ .Title }}</h2>
     <ul id="list">
         {{ range .Data.Pages }}
             {{ .Title }}
         {{ end }}
     </ul>
+</section>
 {{ end }}
