Create partial for download links; include in home page; some cleanup

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,14 +33,14 @@
     </head>
     <body>
         {{ block "header" . }}
-            {{ partial "header" }}
+            {{ partial "header" . }}
         {{ end }}
 
         {{ block "main" . }}
         {{ end }}
 
         {{ block "footer" . }}
-            {{ partial "footer" }}
+            {{ partial "footer" . }}
         {{ end }}
     </body>
 </html>
