--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,18 +5,7 @@
     </a>
     <div class="spacer"></div>
     <div class="links">
-        <a href="{{ $.Param "chromeUrl" }}" target="_blank">
-            {{ partial "chrome.svg" }}
-        </a>
-        <a href="{{ $.Param "iosUrl" }}" target="_blank">
-            {{ partial "apple.svg" }}
-        </a>
-        <a href="{{ $.Param "androidUrl" }}" target="_blank">
-            {{ partial "android.svg" }}
-        </a>
-        <a href="{{ $.Param "githubUrl" }}" target="_blank">
-            {{ partial "github.svg" }}
-        </a>
+        {{ partial "download-links" . }}
     </div>
     <nav>
         <ul>
