--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,13 +13,14 @@
         <h1>Padlock</h1>
         <h2>A minimalist open source password manager.</h2>
         <a class="hero-btn download-link" target="_blank" id="downloadButton"></a>
-        <button class="preview-button"></button>
+        <div class="logo">
+            {{ partial "padlock.svg" . }}
+        </div>
+        <button class="preview-button" style="display: none"></button>
     </div>
     <section class="platforms">
-        <p>Also available on</p>
-        <a href="https://chrome.google.com/webstore/detail/padlock/npkoefjfcjbknoeadfkbcdpbapaamcif" target="_blank" class="platform chrome"></a>
-        <a href="https://play.google.com/store/apps/details?id=com.maklesoft.padlock" target="_blank" class="platform android"></a>
-        <a href="https://itunes.apple.com/app/id871710139" target="_blank" class="platform ios"></a>
+        <h2>Get it now:</h2>
+        {{ partial "download-links" . }}
     </section>
     <section class="subscribe" id="mc_embed_signup">
         <div class="subscribe-text">Want to stay up to date? <strong>Subscribe to our newsletter!</strong></div>
@@ -30,7 +31,7 @@
         </form>
     </section>
     <section class="about">
-        {{ range where .Data.Pages "Title" "about" }}
+        {{ range where .Data.Pages "Title" "About Padlock" }}
             {{ .Content }}
         {{ end }}
     </section>
