--- a/static/css/base.css
+++ b/static/css/base.css
@@ -137,3 +137,13 @@ header .links .icon {
     width: 25px;
     height: 25px;
 }
+
+ul.content {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul.content li:not(:last-item) {
+    border-bottom: solid 1px #ccc;
+}
