Add date, back link to article; Tweak layout for small screen sizes

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,9 +1,11 @@
 <li>
-    <a href="{{ .RelPermalink }}"><h2>{{ .Title }}</h2></a>
-    <p>
-        {{ .Summary }}
-        {{- if .Truncated -}}
-            ... <a href="{{ .RelPermalink }}">Read More</a>
-        {{ end }}
-    </p>
+    <article>
+        <a href="{{ .RelPermalink }}"><h2>{{ .Title }}</h2></a>
+        <p>
+            {{ .Summary }}
+            {{- if .Truncated -}}
+                ... <a href="{{ .RelPermalink }}">Read More</a>
+            {{ end }}
+        </p>
+    </article>
 </li>
