--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
-<section>
-    <h1>{{ .Title }}</h1>
+<article>
+    <a href="/{{ .Section }}">&hookleftarrow; Back to {{ humanize .Section }}</a>
+    <h1>
+        <span>{{ .Title }}</span>
+    </h1>
+    <div class="publish-date">{{ dateFormat "Monday, Jan 2, 2006" .PublishDate }}</div>
     {{ .Content }}
-</section>
+</article>
 {{ end }}
