--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,6 +1,10 @@
 <li>
     <article>
-        <a href="{{ .RelPermalink }}"><h2>{{ .Title }}</h2></a>
+        <a class="title" href="{{ .RelPermalink }}">
+            <h2>{{ .Title }}</h2>
+            <div class="publish-date">{{ dateFormat "Monday, Jan 2, 2006" .PublishDate }}</div>
+        </a>
+        </div>
         <p>
             {{ .Summary }}
             {{- if .Truncated -}}
