minor adjustments to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,3 @@
 <footer>
-    <a href="http://maklesoft.com" target="_blank" class="maklesoft-link">
-        Developed and maintained by <strong>MaKleSoft</strong>
-    </a>
+    <a href="http://maklesoft.com" target="_blank" class="copyright">&copy; 2016 MaKleSoft</a>
 </footer>
