--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <a href="http://maklesoft.com" target="_blank" class="copyright">&copy; 2016 MaKleSoft</a>
+    <a href="http://maklesoft.com" target="_blank" class="copyright maklesoft">&copy; 2016 MaKleSoft</a>
 </footer>
