--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     </a>
     <div class="spacer"></div>
     <div class="links">
-        {{ partial "download-links" . }}
+        {{ partial "social-links" . }}
     </div>
     <nav>
         <ul>
