--- a/layouts/partials/newsletter-signup.html
+++ b/layouts/partials/newsletter-signup.html
@@ -1,4 +1,5 @@
 <div id="mc_embeded_signup" class="newsletter-signup">
+    <h2>Want to stay up to date? Subscribe to our newsletter!</h2>
     <form action="{{ $.Param "mailchimpSignupUrl" }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter email address"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
