--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,6 +47,10 @@ a {
     font-weight: 400;
 }
 
+a:hover {
+    opacity: 0.7;
+}
+
 section {
     padding: 0 20px;
     max-width: 600px;
@@ -133,8 +137,8 @@ header .links a {
 }
 
 header .links .icon {
-    width: 25px;
-    height: 25px;
+    width: 23px;
+    height: 23px;
 }
 
 ul.articles {
@@ -174,7 +178,6 @@ li article h2 {
 }
 
 .newsletter-signup {
-    text-align: center;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
@@ -185,6 +188,7 @@ li article h2 {
 }
 
 .newsletter-signup .email {
+    min-width: 0;
     display: block;
     background-color: #fff;
     border: solid 2px #59c6ff;
