Optimise fluent sizing and layout

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,8 +35,10 @@
             {{ partial "header" . }}
         {{ end }}
 
-        {{ block "main" . }}
-        {{ end }}
+        <main>
+            {{ block "main" . }}
+            {{ end }}
+        </main>
 
         {{ block "footer" . }}
             {{ partial "footer" . }}
