Add newsletter signup form to both list and single templates

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,4 +7,7 @@
     <div class="publish-date">{{ dateFormat "Monday, Jan 2, 2006" .PublishDate }}</div>
     {{ .Content }}
 </article>
+<section>
+    {{ partial "newsletter-signup" . }}
+</section>
 {{ end }}
