--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,6 +55,7 @@ a:hover {
 section {
     padding: 0 40px;
     margin: 40px 0;
+    clear: both;
 }
 
 footer {
@@ -159,6 +160,7 @@ article {
     padding: 0 40px;
     margin: 40px 0;
     box-sizing: border-box;
+    clear: both;
 }
 
 article .publish-date {
@@ -195,6 +197,11 @@ figure {
 
 figure img {
     max-height: 400px;
+    border: solid 1px rgba(89, 198, 255, 0.3);
+}
+
+figure.float img {
+    max-width: 300px;
 }
 
 figure.float.right {
@@ -270,6 +277,10 @@ figure.float.left {
     li article .title {
         flex-direction: column;
         align-items: stretch;
+    }
+
+    figure.float img {
+        max-width: 100%;
     }
 
     figure.float.left, figure.float.right {
