Add another set of download links to the bottom of the home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -38,4 +38,9 @@
             {{ .Content }}
         {{ end }}
     </section>
+
+    <div class="get-it">
+        <h2>Get it Now!</h2>
+        {{ partial "download-links" . }}
+    </div>
 {{ end }}
