--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 <article>
-    <a href="/{{ .Section }}">&hookleftarrow; Back to {{ humanize .Section }}</a>
+    {{ with .Section }}
+    <a href="/{{ . }}">&hookleftarrow; Back to {{ humanize . }}</a>
+    {{ end }}
     <h1>
         <span>{{ .Title }}</span>
     </h1>
